#selected_prompt: fix valign

--- a/css/tt-rss.css
+++ b/css/tt-rss.css
@@ -1028,6 +1028,7 @@ select.attachments {
 
 #selected_prompt {
 	margin-right : 25px;
+	vertical-align  : middle;
 }
 
 span.sel_links {
